--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -30,7 +30,7 @@ nav{
     outline: none;
     background: transparent;
     font-size: medium;
-    color: #ccc;
+    color: #806e6e;
 }
 
 .nav-middle .search-box input::-webkit-input-placeholder{
