--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -47,3 +47,19 @@ nav{
     width: 35px;
     border-radius: 50%;
 }
+
+@media (max-width:900px){
+    .menu-icon{
+        display: none;
+    }
+    .nav-right .user-icon{
+        display: block;
+        width: 30px;
+    }
+    .logo{
+        width: 80px;
+    }
+    .nav-middle .search-box input{
+        width: 100px;
+    }
+}
